Fix schema